--- a/ejercicios/Evaluacion_sesion_03.ipynb
+++ b/ejercicios/Evaluacion_sesion_03.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "db178849-112f-4099-8552-f0fc634edbf1",
    "metadata": {},
    "outputs": [],
@@ -32,20 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "27877c4d-c5c1-4a5f-ba76-4673e37aba49",
    "metadata": {},
    "outputs": [],
    "source": [
     "## TU CODIGO VA EN ESTA CELDA:\n",
     "\n",
-    "spark = SparkSession # levantar sesión de spark\n",
-    "sc = SparkContext # crear contexto de spark"
+    "spark = SparkSession.builder.appName(\"ejercicio_3\").master(\"local[*]\").getOrCreate() # levantar sesión de spark\n",
+    "sc = spark.sparkContext # crear contexto de spark\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "77bed029-3e52-49e1-8daa-b7657637309d",
    "metadata": {},
    "outputs": [],
@@ -71,19 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bfa6b8f5-8e76-484b-8291-6a64bf7a5448",
    "metadata": {},
    "outputs": [],
    "source": [
     "## TU CODIGO VA EN ESTA CELDA:\n",
-    "\n",
-    "data: RDD[str] = sc.emptyRDD() #... reemplazar por lectura de archivo con sc"
+    "sc = spark.sparkContext\n",
+    "data: RDD[str] = sc.textFile(name = \"../resources/data/txt/green_eggs_and_ham.txt\") #... reemplazar por lectura de archivo con sc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "879865f3-adc2-4d53-ac3f-e2c72c19fbfa",
    "metadata": {},
    "outputs": [],
@@ -121,19 +121,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "29788924-a28f-44d2-a875-f6de87fae89c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('I', 83),\n",
+       " ('AM', 16),\n",
+       " ('SAM', 19),\n",
+       " ('THAT', 3),\n",
+       " ('DO', 37),\n",
+       " ('NOT', 82),\n",
+       " ('LIKE', 44),\n",
+       " ('WOULD', 27),\n",
+       " ('YOU', 34),\n",
+       " ('GREEN', 10),\n",
+       " ('EGGS', 11),\n",
+       " ('AND', 25),\n",
+       " ('HAM', 11),\n",
+       " ('THEM', 58),\n",
+       " ('HERE', 11),\n",
+       " ('OR', 8),\n",
+       " ('THERE', 9),\n",
+       " ('ANYWHERE', 8),\n",
+       " ('IN', 40),\n",
+       " ('A', 56),\n",
+       " ('HOUSE', 8),\n",
+       " ('THEN', 1),\n",
+       " ('WITH', 18),\n",
+       " ('MOUSE', 7),\n",
+       " ('EAT', 23),\n",
+       " ('BOX', 7),\n",
+       " ('FOX', 7),\n",
+       " ('COULD', 14),\n",
+       " ('CAR', 7),\n",
+       " ('THEY', 2),\n",
+       " ('ARE', 2),\n",
+       " ('MAY', 4),\n",
+       " ('WILL', 18),\n",
+       " ('SEE', 4),\n",
+       " ('TREE', 6),\n",
+       " ('LET', 4),\n",
+       " ('ME', 4),\n",
+       " ('BE', 4),\n",
+       " ('TRAIN', 8),\n",
+       " ('ON', 6),\n",
+       " ('GREEM', 1),\n",
+       " ('SAY', 5),\n",
+       " ('THE', 11),\n",
+       " ('DARK', 7),\n",
+       " ('RAIN', 4),\n",
+       " ('GOAT', 4),\n",
+       " ('BOAT', 3),\n",
+       " ('SO', 5),\n",
+       " ('TRY', 4),\n",
+       " ('IF', 1),\n",
+       " ('GOOD', 2),\n",
+       " ('THANK', 2)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## TU CODIGO VA EN ESTA CELDA:\n",
     "\n",
-    "result: RDD = data # reemplazar por transformaciones a la variable data"
+    "#Transformación para limpiar el contenido y convertir las letras a mayusculas\n",
+    "result: RDD = data.flatMap(lambda line: line.split()).map(lambda word: word.strip().upper())\n",
+    "\n",
+    "#Transformación para realizar el conteo de palabras\n",
+    "result = result.countByValue()\n",
+    "\n",
+    "#RDD de tuplas para utilizar Word y Count\n",
+    "result = sc.parallelize([(word, count) for word, count in word_counts.items()])\n",
+    "\n",
+    "#Impresión de resultados (muestra todas las palbras del archivo)\n",
+    "result.collect()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "016a94dc-7df0-41ab-a667-8890c85b9fed",
    "metadata": {},
    "outputs": [],
