--- a/ejercicios/Evaluacion_sesion_03.ipynb
+++ b/ejercicios/Evaluacion_sesion_03.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "27877c4d-c5c1-4a5f-ba76-4673e37aba49",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "77bed029-3e52-49e1-8daa-b7657637309d",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "bfa6b8f5-8e76-484b-8291-6a64bf7a5448",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "879865f3-adc2-4d53-ac3f-e2c72c19fbfa",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "29788924-a28f-44d2-a875-f6de87fae89c",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        " ('THANK', 2)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
     "result = result.countByValue()\n",
     "\n",
     "#RDD de tuplas para utilizar Word y Count\n",
-    "result = sc.parallelize([(word, count) for word, count in word_counts.items()])\n",
+    "result = sc.parallelize([(word, count) for word, count in result.items()])\n",
     "\n",
     "#Impresión de resultados (muestra todas las palbras del archivo)\n",
     "result.collect()\n"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "016a94dc-7df0-41ab-a667-8890c85b9fed",
    "metadata": {},
    "outputs": [],
