--- a/ejercicios/Evaluacion_sesion_04.ipynb
+++ b/ejercicios/Evaluacion_sesion_04.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7a07f4ae-96d0-48c9-ad50-753c52b0ec30",
    "metadata": {},
    "outputs": [],
@@ -32,18 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "71db4bec-ce2a-4b44-98d0-4fbdab40ff18",
    "metadata": {},
    "outputs": [],
    "source": [
     "## TU CODIGO VA EN ESTA CELDA:\n",
-    "spark = SparkSession # levantar sesion de spark"
+    "# levantar sesion de spark\n",
+    "spark = SparkSession.builder.appName(\"ejercicio_4\").master(\"local[*]\").getOrCreate() # levantar sesión de spark\n",
+    "sc = spark.sparkContext # crear contexto de spark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "a96f213c-5230-4a4d-9b01-d28e073d0c5f",
    "metadata": {},
    "outputs": [],
@@ -67,19 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "636335bd-d238-410c-ab45-bcdb6c732fe2",
    "metadata": {},
    "outputs": [],
    "source": [
     "## TU CODIGO VA EN ESTA CELDA:\n",
     "def read_csv(path: str) -> DataFrame:\n",
-    "    return spark.createDataFrame([], StructType([])) # reemplazar por lectura de dataframe"
+    "    return spark.read\\\n",
+    "        .option(\"header\",\"true\")\\\n",
+    "        .option(\"delimiter\",\",\")\\\n",
+    "        .option(\"inferSchema\",\"false\")\\\n",
+    "        .csv(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "adb49e98-a62e-4324-af0b-626ec21c02ab",
    "metadata": {},
    "outputs": [],
@@ -117,19 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "08393772-6be3-4bc8-acea-1856800a3b18",
    "metadata": {},
    "outputs": [],
    "source": [
     "## TU CODIGO VA EN ESTA CELDA:\n",
     "def write_parquet(df: DataFrame, path: str):\n",
-    "    pass # colocar codigo de escritura"
+    "    return df.write.mode(\"overwrite\").parquet(path)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "9ee1cea1-a37e-4027-9520-abfca31b3bdf",
    "metadata": {},
    "outputs": [],
